tests/paczka2/big_fuzzy/96967465.err
Error in line 1: A958 A881 95,7
Error in line 13: P2MYCoDGs A881 23,0
Error in line 17: fSO0 A958 11,6
Error in line 22: 5ulEd A881 3,6
Error in line 31: bqzplO5HxM A95  3,4
Error in line 34: P2MYCoDGs A881 96,44
Error in line 14: P2MYCoDGs A958 61,3
Error in line 36: P2MYCoDGs A881 72,3
Error in line 50: 5ulEd A881 4,1
Error in line 33: bqzplO5HxM A958 15,4
Error in line 54: kbTsPkF A770 65,2
Error in line 57: bqzplO5HxM A770 78,4
Error in line 66: P2MYCoDGs A881 25,1
Error in line 71: bqzplO5HxM A28 74,0
Error in line 76: bqzplO5HxM A770 52,9
Error in line 82: P2MYCoDGs A770 39,9
Error in line 87: P2MYCoDGs A881 88,4
Error in line 104: A958 A28 9,8
Error in line 108: A958 A881 64,5
Error in line 114: A958 A958 168,2
Error in line 101: 5ulEd A881 16,1
Error in line 118: bqzplO5HxM A28 151,1
Error in line 119: 5ulEd A28 42,8
Error in line 128: bqzplO5HxM A770 39,2
Error in line 124: 5ulEd A881 49,0
Error in line 141: fSO0 A770 85,44
Error in line 143: fSO0 A958 58,3
Error in line 145: P2MYCoDGs A770 13,3
Error in line 153: GO82s A28 0,85
Error in line 136: A958 A770 18,3
Error in line 159: fSO0 A958 34,8
Error in line 158: A958 A28 33,5
Error in line 169: A958 A770 275,37
Error in line 162: A958 A770 89,8
Error in line 171: A958 A881 69,6
Error in line 174: GO82s A770 71,2
Error in line 182: fSO0 A770 33,8
Error in line 190: GO82s A770 81,80
Error in line 193: bqzplO5HxM A770 96,1
Error in line 198: P2MYCoDGs A770 18,2
Error in line 192: GO82s A770 170,1
Error in line 205: GO82s A958 5,3
Error in line 211: 5ulEd A958 -2,3
Error in line 209: GO82s A770 83,6
Error in line 201: P2MYCoDGs A28 56,1
Error in line 215: P2MYCoDGs A881 21,3
Error in line 210: fSO0 A881 53,0
Error in line 217: P2MYCoDGs A28 53,9
Error in line 204: 5ulEd A958 29,0
Error in line 220: P2MYCoDGs A881 62,0
Error in line 214: GO82s A881 64,7
Error in line 232: GO82s A28 29,58
Error in line 227: GO82s A958 21,9
Error in line 237: GO82s A770 92,3
Error in line 245: A58 A881 40,3
Error in line 246: A958 A770 33,0
Error in line 249: A958 A28 47,6
